2 way binding, local reference and @ViewChild

--- a/src/app/server-element/server.element.component.html
+++ b/src/app/server-element/server.element.component.html
@@ -2,8 +2,7 @@
 <!-- <div
 class="panel panel-default"
 *ngFor="let element of serverElements"> -->
-<div
-class="panel panel-default">
+<div class="panel panel-default">
 <div class="panel-heading">{{ element.name }}</div>
 <div class="panel-body">
   <p>
@@ -11,4 +10,11 @@ class="panel panel-default">
     <em *ngIf="element.type === 'blueprint'">{{ element.content }}</em>
   </p>
 </div>
+<br>
+
+
+<div class="panel-body">
+  <!-- <div class="panel-heading">{{ element2.type }}</div> -->
+</div>
+
 </div>
