--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,52 +1,25 @@
-<div class="container">
-  <app-cockpit
-  (serverCreated)="onServerAdded($event)"
-  (blueprintCreated)="onBlueprintAdded($event)">
-</app-cockpit>
-  <!-- <div class="row">
-    <div class="col-xs-12">
-      <p>Add new Servers or blueprints!</p>
-      <label>Server Name</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerName">
-      <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
-      <br>
-      <button
-        class="btn btn-primary"
-        (click)="onAddServer()">Add Server</button>
-      <button
-        class="btn btn-primary"
-        (click)="onAddBlueprint()">Add Server Blueprint</button>
-    </div>
-  </div> -->
 
-<!-- <app-test-component></app-test-component> -->
+<div class="container">
+
+<!-- Getting information from cockpit -->
+<app-cockpit
+  (serverCreated)="onServerAdded($event)"
+  (bpCreated)="onBlueprintAdded($event)">
+</app-cockpit>
+
+
+<br>
+
+
   <hr>
   <div class="row">
     <div class="col-xs-12">
+<!-- Displaying information into the server-element -->
       <app-server-element
        *ngFor="let serverElement of serverElements"
        [srvElement] = "serverElement">
       </app-server-element>
-<!-- <p>Below is from the app.component</p>
-      <div *ngFor="let element of serverElements">
-        <h3>{{ element.name }}</h3>
-        <p>Type: {{ element.type }}</p>
-        <p>Content: {{ element.content }}</p>
-      </div> -->
 
-
-      <!-- <div
-        class="panel panel-default"
-        *ngFor="let element of serverElements">
-        <div class="panel-heading">{{ element.name }}</div>
-        <div class="panel-body">
-          <p>
-            <strong *ngIf="element.type === 'server'" style="color: red">{{ element.content }}</strong>
-            <em *ngIf="element.type === 'blueprint'">{{ element.content }}</em>
-          </p>
-        </div>
-      </div> -->
     </div>
   </div>
 </div>
