--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -2,15 +2,47 @@
     <div class="col-xs-12">
       <p>Add new Servers or blueprints!</p>
       <label>Server Name</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerName">
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerName"> -->
+
+     <!-- Below input is passing the element directly to the eventlistener param -->
+     <!-- Called a local reverence -->
+      <input
+        type="text"
+        class="form-control"
+        #serverNameInput>
       <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
+
+      <!-- Below is example of 2 way binding  -->
+      <!-- Is this tying the input value directly to the .ts code var -->
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent"> -->
+
+      <input
+        type="text"
+        class="form-control"
+        #serverContentInput>
+
       <br>
       <button
         class="btn btn-primary"
-        (click)="onAddServer()">Add Server</button>
+        (click)="onAddServer(serverNameInput)">Add Server</button>
+
       <button
         class="btn btn-primary"
         (click)="onAddBlueprint()">Add Server Blueprint</button>
+
     </div>
+
   </div>
+<!--
+  - Info typed in the input "newServerName"
+  - var gets populated in the ts file
+  - Button gets clicked
+  - Calls the onAddServer() in cockpit.compnent.ts
+  - The value of serverCreated gets updated with the value
+    from newServerName var
+  - The @Output makes it accesable to outside components?
+  - The server.element component.ts file pulls in value from cockpit
+    with the @Input
+  - Then we can use that array to itterate over using *ngIf to
+    populate
+ -->
