--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,17 @@
   <div class="row">
     <div class="col-xs-12">
 <!-- Displaying information into the server-element -->
+      <button class="btn btn-primary" (click)="onChangeFirst()">Change First Element</button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">Destroy First Element</button>
+
       <app-server-element
        *ngFor="let serverElement of serverElements"
-       [srvElement] = "serverElement">
+       [srvElement] = "serverElement"
+       [name]="serverElement.name">
+       <p #contentParagraph>
+        <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+        <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+      </p>
       </app-server-element>
 
     </div>
