--- a/src/app/server-element/server.element.component.html
+++ b/src/app/server-element/server.element.component.html
@@ -3,12 +3,14 @@
 class="panel panel-default"
 *ngFor="let element of serverElements"> -->
 <div class="panel panel-default">
-<div class="panel-heading">{{ element.name }}</div>
+<!-- <div class="panel-heading">{{ element.name }}</div> -->
+<div class="panel-heading" #heading>{{ name }}</div>
 <div class="panel-body">
-  <p>
+  <!-- <p>
     <strong *ngIf="element.type === 'server'" style="color: red">{{ element.content }}</strong>
     <em *ngIf="element.type === 'blueprint'">{{ element.content }}</em>
-  </p>
+  </p> -->
+  <ng-content></ng-content>
 </div>
 <br>
 
